--- a/L1/index.html
+++ b/L1/index.html
@@ -141,19 +141,19 @@
                                                 <a href="#">Services</a>
                                                 <ul class="sub-menu">
                                                     <li><a href="depression-service.html">Mood Disorders</a></li>
-                                                    <li><a href="schizophrenia-service.html">Pychosis</a></li>
-                                                    <li><a href="alcohol-de-addiction.html">Anxiety</a></li>
-                                                    <li><a href="mood-disorder.html">Addictions</a></li>
+                                                    <li><a href="pyshosis.html">Pychosis</a></li>
+                                                    <li><a href="anxiety.html">Anxiety</a></li>
+                                                    <li><a href="addiction.html">Addictions</a></li>
 
                                                     
-                                                    <li><a href="#">Childhood Disorders</a></li>
-                                                    <li><a href="#">Geriatric Disorders</a></li>
+                                                    <li><a href="childhood-disorders.html">Childhood Disorders</a></li>
+                                                    <li><a href="geriatric-disorders.html">Geriatric Disorders</a></li>
                                                     <li><a href="#">Sexual Disorders</a></li>
                                                     <li><a href="#">Stress & Anger</a></li>
                                                 </ul>
                                             </li>
-                                            <li><a href="#">Self Care</a></li>
-                                            <li><a href="#">Therapies</a></li>
+                                            <li><a href="selfcare.html">Self Care</a></li>
+                                            <li><a href="therapies.html">Therapies</a></li>
                                             <li><a href="sattva-gallery.html">Gallery </a></li>
                                             <li><a href="sattva-testimonial.html">Testimonial</a></li>
                                             <li>
@@ -586,7 +586,7 @@
                                             <div class="feature-one__shape-1">
                                                 <img src="assets/images/shapes/feature-one-shape-1.png" alt="">
                                             </div>
-                                            <h3 class="feature-one__hover-title"><a href="#">Childhood Disorders</a></h3>
+                                            <h3 class="feature-one__hover-title"><a href="childhood-disorders.html">Childhood Disorders</a></h3>
                                             <p class="feature-one__hover-text">
                                                 Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...
                                             </p>
@@ -602,7 +602,7 @@
                                     <div class="feature-one__icon">
                                         <img src="assets/images/new-home/service-icon.png" />
                                     </div>
-                                    <h3 class="feature-one__title"><a href="#">Childhood Disorders</a></h3>
+                                    <h3 class="feature-one__title"><a href="childhood-disorders.html">Childhood Disorders</a></h3>
                                 </div>
                             </div>
                         </div>
@@ -622,7 +622,7 @@
                                             <div class="feature-one__shape-1">
                                                 <img src="assets/images/shapes/feature-one-shape-1.png" alt="">
                                             </div>
-                                            <h3 class="feature-one__hover-title"><a href="#">Geriatric Disorders</a></h3>
+                                            <h3 class="feature-one__hover-title"><a href="geriatric-disorders.html">Geriatric Disorders</a></h3>
                                             <p class="feature-one__hover-text">
                                                 Text Soon...Text Soon...Text Soon...Text Soon...Text Soon...
                                             </p>
@@ -638,7 +638,7 @@
                                     <div class="feature-one__icon">
                                         <img src="assets/images/new-home/service-icon.png" />
                                     </div>
-                                    <h3 class="feature-one__title"><a href="#">Geriatric Disorders</a></h3>
+                                    <h3 class="feature-one__title"><a href="geriatric-disorders.html">Geriatric Disorders</a></h3>
                                 </div>
                             </div>
                         </div>
