--- a/L1/geriatric-disorders.html
+++ b/L1/geriatric-disorders.html
@@ -73,8 +73,8 @@
                             </div>
                         </div>
                         <!-- <div class="main-menu__btn-box">
-                            <a href="#">Make an Appointment</a>
-                        </div> -->
+                        <a href="#">Make an Appointment</a>
+                    </div> -->
                         <div class="main-menu__wrapper-inner-content">
                             <div class="main-menu__top">
                                 <div class="main-menu__top-inner">
@@ -138,14 +138,22 @@
                                                 </ul>
                                             </li>
                                             <li class="dropdown">
-                                                <a href="#">Psychiatric condition</a>
+                                                <a href="#">Services</a>
                                                 <ul class="sub-menu">
-                                                    <li><a href="depression-service.html">Depression</a></li>
-                                                    <li><a href="schizophrenia-service.html">Schizophrenia</a></li>
-                                                    <li><a href="alcohol-de-addiction.html">Alcohol de-addiction</a></li>
-                                                    <li><a href="mood-disorder.html">Mood Disorder</a></li>
+                                                    <li><a href="depression-service.html">Mood Disorders</a></li>
+                                                    <li><a href="pyshosis.html">Pychosis</a></li>
+                                                    <li><a href="anxiety.html">Anxiety</a></li>
+                                                    <li><a href="addiction.html">Addictions</a></li>
+
+
+                                                    <li><a href="childhood-disorders.html">Childhood Disorders</a></li>
+                                                    <li><a href="geriatric-disorders.html">Geriatric Disorders</a></li>
+                                                    <li><a href="#">Sexual Disorders</a></li>
+                                                    <li><a href="#">Stress & Anger</a></li>
                                                 </ul>
                                             </li>
+                                            <li><a href="selfcare.html">Self Care</a></li>
+                                            <li><a href="therapies.html">Therapies</a></li>
                                             <li><a href="sattva-gallery.html">Gallery </a></li>
                                             <li><a href="sattva-testimonial.html">Testimonial</a></li>
                                             <li>
@@ -154,18 +162,18 @@
                                         </ul>
                                     </div>
                                     <!-- <div class="main-menu__right">
-                                        <div class="main-menu__call">
-                                            <div class="main-menu__call-icon">
-                                                <span class="icon-phone-call"></span>
-                                            </div>
-                                            <div class="main-menu__call-content">
-                                                <p class="main-menu__call-sub-title">Have Question?</p>
-                                                <h5 class="main-menu__call-number"><a href="#">+91 0000000000</a>
-                                                </h5>
-                                            </div>
+                                    <div class="main-menu__call">
+                                        <div class="main-menu__call-icon">
+                                            <span class="icon-phone-call"></span>
                                         </div>
+                                        <div class="main-menu__call-content">
+                                            <p class="main-menu__call-sub-title">Have Question?</p>
+                                            <h5 class="main-menu__call-number"><a href="#">+91 0000000000</a>
+                                            </h5>
+                                        </div>
+                                    </div>
 
-                                    </div> -->
+                                </div> -->
                                 </div>
                             </div>
                         </div>
@@ -208,19 +216,19 @@
                                         <a href="depression-service.html">Mood Disorders</a>
                                     </li>
                                     <li>
-                                        <a href="schizophrenia-service.html">Pychosis</a>
+                                        <a href="pyshosis.html">Pychosis</a>
                                     </li>
                                     <li>
-                                        <a href="alcohol-de-addiction.html">Anxiety</a>
+                                        <a href="anxiety.html">Anxiety</a>
                                     </li>
                                     <li>
-                                        <a href="mood-disorder.html">Addictions</a>
+                                        <a href="addiction.html">Addictions</a>
                                     </li>
                                     <li>
-                                        <a href="depression-service.html">Childhood Disorders</a>
+                                        <a href="childhood-disorders.html">Childhood Disorders</a>
                                     </li>
                                     <li class="active">
-                                        <a href="schizophrenia-service.html">Geriatric Disorders</a>
+                                        <a href="geriatric-disorders.html">Geriatric Disorders</a>
                                     </li>
                                     <li>
                                         <a href="alcohol-de-addiction.html">Sexual Disorders</a>
