--- a/L1/about-sattva.html
+++ b/L1/about-sattva.html
@@ -149,8 +149,8 @@
 
                                                     <li><a href="childhood-disorders.html">Childhood Disorders</a></li>
                                                     <li><a href="geriatric-disorders.html">Geriatric Disorders</a></li>
-                                                    <li><a href="#">Sexual Disorders</a></li>
-                                                    <li><a href="#">Stress & Anger</a></li>
+                                                    <li><a href="sexual-disorders.html">Sexual Disorders</a></li>
+                                                    <li><a href="stress-anger.html">Stress & Anger</a></li>
                                                 </ul>
                                             </li>
                                             <li><a href="selfcare.html">Self Care</a></li>
