--- a/L1/stress-anger.html
+++ b/L1/stress-anger.html
@@ -73,8 +73,8 @@
                             </div>
                         </div>
                         <!-- <div class="main-menu__btn-box">
-                        <a href="#">Make an Appointment</a>
-                    </div> -->
+                            <a href="#">Make an Appointment</a>
+                        </div> -->
                         <div class="main-menu__wrapper-inner-content">
                             <div class="main-menu__top">
                                 <div class="main-menu__top-inner">
@@ -162,18 +162,18 @@
                                         </ul>
                                     </div>
                                     <!-- <div class="main-menu__right">
-                                    <div class="main-menu__call">
-                                        <div class="main-menu__call-icon">
-                                            <span class="icon-phone-call"></span>
+                                        <div class="main-menu__call">
+                                            <div class="main-menu__call-icon">
+                                                <span class="icon-phone-call"></span>
+                                            </div>
+                                            <div class="main-menu__call-content">
+                                                <p class="main-menu__call-sub-title">Have Question?</p>
+                                                <h5 class="main-menu__call-number"><a href="#">+91 0000000000</a>
+                                                </h5>
+                                            </div>
                                         </div>
-                                        <div class="main-menu__call-content">
-                                            <p class="main-menu__call-sub-title">Have Question?</p>
-                                            <h5 class="main-menu__call-number"><a href="#">+91 0000000000</a>
-                                            </h5>
-                                        </div>
-                                    </div>
 
-                                </div> -->
+                                    </div> -->
                                 </div>
                             </div>
                         </div>
@@ -194,7 +194,7 @@
             </div>
             <div class="container">
                 <div class="page-header__inner">
-                    <h2>Pychosis</h2>
+                    <h2>Stress & Anger</h2>
                     <ul class="thm-breadcrumb list-unstyled">
                         <li><a href="index.html">Home</a></li>
                         <li><span>/</span></li>
@@ -215,7 +215,7 @@
                                     <li>
                                         <a href="depression-service.html">Mood Disorders</a>
                                     </li>
-                                    <li class="active">
+                                    <li>
                                         <a href="pyshosis.html">Pychosis</a>
                                     </li>
                                     <li>
@@ -233,7 +233,7 @@
                                     <li>
                                         <a href="alcohol-de-addiction.html">Sexual Disorders</a>
                                     </li>
-                                    <li>
+                                    <li class="active">
                                         <a href="stress-anger.html">Stress & Anger</a>
                                     </li>
                                 </ul>
@@ -259,113 +259,32 @@
                     <div class="col-xl-8 col-lg-7">
                         <div class="services-details__right">
                             <div class="services-details__img">
-                                <img src="assets/images/new-home/pyshosis/banner.jpg" alt="">
+                                <img src="assets/images/new-home/stress-anger/banner.jpg" alt="">
                             </div>
-                            <h3 class="services-details__title-1">Evaluation</h3>
-                            <p class="services-details__text-1">As with any other medical or psychiatric condition, the interview is of the utmost importance for guiding the treatment plan. As usual, one starts by obtaining a thorough history. The history should include but is not limited to the following: timeline and severity of symptoms, prior psychiatric history/conditions, hospitalizations, previous medical history/conditions, medications taken (psychiatric and non-psychiatric), history of substance use, detailed social history, history of trauma (emotional, physical, sexual), suicidal ideation with prior attempts, auditory/visual hallucinations</p>
-                            <p class="services-details__text-1 mt-20">Of equal importance to the history, and an indispensable component of the psychiatric interview is the mental status exam (MSE). One must make a careful observation regarding the patient’s appearance, behavior, speech, mood, affect, thought process, and thought content.</p>
-                            <p class="services-details__text-1 mt-20">Of equal importance to the history, and an indispensable component of the psychiatric interview is the mental status exam (MSE). One must make a careful observation regarding the patient’s appearance, behavior, speech, mood, affect, thought process, and thought content.</p>
-                            <div class="row">
-                                <div class="col-xl-6 col-lg-6">
-                                    <ul class="services-details__benefit-points list-unstyled mt-20">
-                                        <li>
-                                            <div class="icon">
-                                                <span class="fa fa-check"></span>
-                                            </div>
-                                            <div class="text">
-                                                <p>Complete blood count and metabolic panel</p>
-                                            </div>
-                                        </li>
-                                        <li>
-                                            <div class="icon">
-                                                <span class="fa fa-check"></span>
-                                            </div>
-                                            <div class="text">
-                                                <p>Urinalysis, urine cultures</p>
-                                            </div>
-                                        </li>
-                                        <li>
-                                            <div class="icon">
-                                                <span class="fa fa-check"></span>
-                                            </div>
-                                            <div class="text">
-                                                <p>Thyroid-stimulating hormone (TSH), T3, T3</p>
-                                            </div>
-                                        </li>
-                                        <li>
-                                            <div class="icon">
-                                                <span class="fa fa-check"></span>
-                                            </div>
-                                            <div class="text">
-                                                <p>Liver function tests</p>
-                                            </div>
-                                        </li>
-                                        <li>
-                                            <div class="icon">
-                                                <span class="fa fa-check"></span>
-                                            </div>
-                                            <div class="text">
-                                                <p>Vitamin B12</p>
-                                            </div>
-                                        </li>
-
-                                    </ul>
-                                </div>
-                                <div class="col-xl-6 col-lg-6">
-                                    <ul class="services-details__benefit-points list-unstyled mt-20">
-
-                                        <li>
-                                            <div class="icon">
-                                                <span class="fa fa-check"></span>
-                                            </div>
-                                            <div class="text">
-                                                <p>HIV</p>
-                                            </div>
-                                        </li>
-                                        <li>
-                                            <div class="icon">
-                                                <span class="fa fa-check"></span>
-                                            </div>
-                                            <div class="text">
-                                                <p>CT, MRI</p>
-                                            </div>
-                                        </li>
-                                        <li>
-                                            <div class="icon">
-                                                <span class="fa fa-check"></span>
-                                            </div>
-                                            <div class="text">
-                                                <p>EEG</p>
-                                            </div>
-                                        </li>
-                                        <li>
-                                            <div class="icon">
-                                                <span class="fa fa-check"></span>
-                                            </div>
-                                            <div class="text">
-                                                <p>Lumbar puncture</p>
-                                            </div>
-                                        </li>
-                                        <li>
-                                            <div class="icon">
-                                                <span class="fa fa-check"></span>
-                                            </div>
-                                            <div class="text">
-                                                <p>Rheumatologic or immunologic workup</p>
-                                            </div>
-                                        </li>
-                                    </ul>
-                                </div>
+                            <h3 class="services-details__title-1">Stress</h3>
+                            <p class="services-details__text-1">Stress is a natural response to challenging or threatening situations. However, chronic stress can impact mental health and lead to anxiety, depression, sleep disturbances, and physical health issues.Psychiatric aspects: Stress can exacerbate or trigger mental health conditions, such as anxiety disorders and depression.</p>
+                            <div class="treatment-box mt-20">
+                                <p class="services-details__text-1"><strong style="color:#50235d">Treatment:</strong> Treatment options for stress include stress management techniques (e.g., mindfulness, relaxation exercises), therapy (e.g., CBT), medication (e.g., antidepressants or anti-anxiety medication), and lifestyle changes (e.g., exercise, healthy diet).</p>
                             </div>
-                            <p class="services-details__text-2 mt-20">
-                                Antipsychotic medications are the gold-standard treatment for psychotic episodes and disorders, and the choice, dosing, and administration of the medication will largely depend on the scenario.</p>
-                            <p class="services-details__text-2 mt-20">
-                                Along with medications, family and caregivers also play an important role in the management of a psychotic patient, including providing a safe and therapeutic environment for the patient, as well as interacting with them in and calm, empathetic manner.
-                            </p>
+                            <h3 class="services-details__title-1">Anger</h3>
+                            <p class="services-details__text-1">Anger is a normal emotion, but when it becomes excessive or uncontrolled, it can lead to aggression, relationship problems, and physical health issues. Psychiatric aspects: Chronic anger can be a symptom of underlying mental health conditions, such as intermittent explosive disorder or depression.</p>
+                            <div class="treatment-box mt-20">
+                                <p class="services-details__text-1"><strong style="color:#50235d">Treatment:</strong> Treatment options for anger management include therapy (e.g., anger management therapy, CBT), stress reduction techniques, communication skills training, medication (e.g., mood stabilizers), and support groups.</p>
+                            </div>
+                            <h3 class="services-details__title-1">Separation</h3>
+                            <p class="services-details__text-1">Separation from a loved one, such as a parent, caregiver, or partner, can be emotionally difficult and may trigger feelings of grief, abandonment, and loneliness. Psychiatric aspects: Separation can lead to adjustment disorders, anxiety, depression, and post-traumatic stress disorder (PTSD), especially if the separation is sudden or traumatic.</p>
+                            <div class="treatment-box mt-20">
+                                <p class="services-details__text-1"><strong style="color:#50235d">Treatment:</strong> Treatment options may include therapy (e.g., grief counseling, trauma-focused therapy), support groups, medication (e.g., antidepressants or anti-anxiety medication), and developing healthy coping mechanisms and support systems.</p>
+                            </div>
+                            <h3 class="services-details__title-1">Marital Discord</h3>
+                            <p class="services-details__text-1">Marital discord refers to ongoing conflict, tension, and dissatisfaction in a marriage or romantic relationship.</p>
+                            <p class="services-details__text-1 mt-20">Psychiatric aspects: Marital discord can contribute to mental health issues in both partners, including anxiety, depression, substance abuse, and low self-esteem.</p>
+                            <div class="treatment-box mt-20">
+                                <p class="services-details__text-1"><strong style="color:#50235d">Treatment:</strong> Treatment options for marital discord may include couples therapy, individual therapy, communication skills training, conflict resolution strategies, support from family and friends, and possibly medication for underlying mental health conditions.</p>
+                            </div>
+
                         </div>
                     </div>
-
-
                 </div>
                 <div class="services-details__book mt-90">
                     <div class="services-details__book-img">
