--- a/L1/anxiety.html
+++ b/L1/anxiety.html
@@ -148,8 +148,8 @@
 
                                                     <li><a href="childhood-disorders.html">Childhood Disorders</a></li>
                                                     <li><a href="geriatric-disorders.html">Geriatric Disorders</a></li>
-                                                    <li><a href="#">Sexual Disorders</a></li>
-                                                    <li><a href="#">Stress & Anger</a></li>
+                                                    <li><a href="sexual-disorders.html">Sexual Disorders</a></li>
+                                                    <li><a href="stress-anger.html">Stress & Anger</a></li>
                                                 </ul>
                                             </li>
                                             <li><a href="selfcare.html">Self Care</a></li>
@@ -234,7 +234,7 @@
                                         <a href="alcohol-de-addiction.html">Sexual Disorders</a>
                                     </li>
                                     <li>
-                                        <a href="mood-disorder.html">Stress & Anger</a>
+                                        <a href="stress-anger.html">Stress & Anger</a>
                                     </li>
                                 </ul>
                             </div>
