--- a/L1/depression-service.html
+++ b/L1/depression-service.html
@@ -233,7 +233,7 @@
                                         <a href="geriatric-disorders.html">Geriatric Disorders</a>
                                     </li>
                                     <li>
-                                        <a href="alcohol-de-addiction.html">Sexual Disorders</a>
+                                        <a href="sexual-disorders.html">Sexual Disorders</a>
                                     </li>
                                     <li>
                                         <a href="stress-anger.html">Stress & Anger</a>
@@ -253,7 +253,29 @@
                                     <a href="contact.html" class="banner-one__btn thm-btn">Contact Now</a>
                                 </div>
                             </div>
-                            
+                            <div class="services-details__documents">
+                                <h4 class="text-center">Click here to know more</h4>
+                                <ul class="services-details__documents-list list-unstyled mt-20">
+                                    <li>
+                                        <div class="icon">
+                                            <span class="icon-pdf-file"></span>
+                                        </div>
+                                        <div class="content">
+                                            <h3><a href="#">Control Self Esteem</a></h3>
+                                            <p>3.9KB</p>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="icon">
+                                            <span class="icon-pdf-file"></span>
+                                        </div>
+                                        <div class="content">
+                                            <h3><a href="#">How to Save Yourself</a></h3>
+                                            <p>3.9KB</p>
+                                        </div>
+                                    </li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
                     <div class="col-xl-8 col-lg-7">
@@ -362,7 +384,7 @@
                                                         </div>
                                                     </li>
                                                 </ul>
-                                                <p class="services-details__text-2 mt-20">Depression is a mood disorder that causes a persistent feeling of sadness and loss of interest.[1][2] The American Psychiatric Association’s Diagnostic Statistical Manual of Mental Disorders, Fifth Edition (DSM-5) classifies the depressive disorders into:</p>
+                                                <p class="services-details__text-2 mt-20">Depression is a mood disorder that causes a persistent feeling of sadness and loss of interest.The American Psychiatric Association’s Diagnostic Statistical Manual of Mental Disorders, Fifth Edition (DSM-5) classifies the depressive disorders into:</p>
                                                 <ul class="services-details__benefit-points list-unstyled mt-20">
                                                     <li>
                                                         <div class="icon">
@@ -461,7 +483,6 @@
                                                 </div>
                                                 
                                                 <p class="services-details__text-2 mt-20">Because of false perceptions, nearly 60% of people with depression do not seek medical help. Many feel that the stigma of a mental health disorder is not acceptable in society and may hinder both personal and professional life. There is good evidence indicating that most antidepressants do work but the individual response to treatment may vary.</p>
-                                                <p class="services-details__text-2 mt-20"><p class="services-details__text-2 mt-20">Because of false perceptions, nearly 60% of people with depression do not seek medical help. Many feel that the stigma of a mental health disorder is not acceptable in society and may hinder both personal and professional life. There is good evidence indicating that most antidepressants do work but the individual response to treatment may vary.</p>
                                                 <div class="get-one__points-list mt-20 service-icon-section">
                                                     <div class="row">
                                                         <!--Get One Points Single Start-->
@@ -530,10 +551,10 @@
                                                         <div class="col-xl-4 col-lg-4 col-md-6">
                                                             <div class="get-one__points-single">
                                                                 <div class="get-one__points-title">
-                                                                    <h4><a href="#">Appetite</a></h4>
+                                                                    <h4><a href="#">Appetite Changes</a></h4>
                                                                 </div>
                                                                 <div class="get-one__points-text-box">
-                                                                    <h4><a href="#">Appetite</a></h4>
+                                                                    <h4><a href="#">Appetite Changes</a></h4>
                                                                 </div>
                                                             </div>
                                                         </div>
