--- a/L1/stress-anger.html
+++ b/L1/stress-anger.html
@@ -231,7 +231,7 @@
                                         <a href="geriatric-disorders.html">Geriatric Disorders</a>
                                     </li>
                                     <li>
-                                        <a href="alcohol-de-addiction.html">Sexual Disorders</a>
+                                        <a href="sexual-disorders.html">Sexual Disorders</a>
                                     </li>
                                     <li class="active">
                                         <a href="stress-anger.html">Stress & Anger</a>
@@ -253,7 +253,29 @@
                                     <a href="contact.html" class="banner-one__btn thm-btn">Contact Now</a>
                                 </div>
                             </div>
-
+                            <div class="services-details__documents">
+                                <h4 class="text-center">Click here to know more</h4>
+                                <ul class="services-details__documents-list list-unstyled mt-20">
+                                    <li>
+                                        <div class="icon">
+                                            <span class="icon-pdf-file"></span>
+                                        </div>
+                                        <div class="content">
+                                            <h3><a href="#">Control Self Esteem</a></h3>
+                                            <p>3.9KB</p>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="icon">
+                                            <span class="icon-pdf-file"></span>
+                                        </div>
+                                        <div class="content">
+                                            <h3><a href="#">How to Save Yourself</a></h3>
+                                            <p>3.9KB</p>
+                                        </div>
+                                    </li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
                     <div class="col-xl-8 col-lg-7">
